Style fixes, spacing at bottom last

--- a/features/common/components/WaveSection/wave.module.css
+++ b/features/common/components/WaveSection/wave.module.css
@@ -84,7 +84,7 @@
   width: 100%;
   height: 20vh;
   min-height: 100px;
-  max-height: 150px;
+  /* max-height: 150px; */
   z-index: 5;
 }
 .motion > use {
